# napari-gemscape

./: .gitignore  README.md  setup.cfg  tox.ini
prototypes/: track_data.csv  track_visualization.org
src/napari_gemscape/: __init__.py  analysis.py  batch_process.py  gemscape_widget.py  napari.yaml
src/napari_gemscape/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_gemscape/core/: .#batch_process.py  analysis.py  batch_process.py
src/napari_gemscape/core/utils/: __init__.py  diffusion_helpers.py  file_io.py  iMSD.py  miscellaneous.py  viz.py
src/napari_gemscape/tests/: batch_test.sh
src/napari_gemscape/utils/: __init__.py  file_io.py
src/napari_gemscape/widgets/: __init__.py  file_input_widgets.py  plot_widgets.py  text_editor_widgets.py  widget_helpers.py
