[metadata]
name = napari-gemscape
version = attr: napari_gemscape.__version__
description = Plugin to analyze GEMs within napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/delnatan/napari-gemscape
author = Daniel Elnatan
author_email = delnatan@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/delnatan/napari-gemscape/issues
    Documentation = https://github.com/delnatan/napari-gemscape#README.md
    Source Code = https://github.com/delnatan/napari-gemscape
    User Support = https://github.com/delnatan/napari-gemscape/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    scikit-image
    trackpy
    pandas
    matplotlib
    seaborn
    h5py
    mrc
	nd2
    tifffile
    spotfitlm @ git+https://github.com/delnatan/spotfitlm.git@main
    


python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-gemscape = napari_gemscape:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
